--- a/pandas_manipulation.ipynb
+++ b/pandas_manipulation.ipynb
@@ -1,29 +1,34 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "pandas_manipulation.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "## importing my dependecy"
-      ],
+        "Create a google doc and research the following concepts in pandas\n",
+        "Pivot tables in pandas: is an excellent tool to summarize one or more numeric variables, in pandas pivot tables are popularly seen in MS Excel files. In python, Pivot tables of pandas dataframes can be created using the command: (pandas.pivot_table)\n",
+        "\n",
+        "Working with multiple tables in pandas (merge, join, concat):When you want to combine data objects based on one or more keys, similar to what you’d do in a relational database, merge() is the tool you need. More specifically, merge() is most useful when you want to combine rows that share data. .join() uses merge(), but it provides a more efficient way to join DataFrames than a fully specified merge() call.This enables you to specify only one DataFrame, which will join the DataFrame you call .join() on. .merge() for combining data on common columns or indices,.join() for combining data on a key column or an index,concat() for combining DataFrames across rows or columns.   \n",
+        "\n",
+        "Pandas merge method: the merge() method updates the content of two DataFrame by merging them together, using the specified method(s). Below is a syntax of some needed parameters passed into the .merge() call.\n",
+        "dataframe.merge(right, how, on, left_on, right_on, left_index, right_index, sort, suffixes, copy, indicator, validate)\n",
+        "\n",
+        "The different types of merge: : merge and join carry out almost the same function , which is why for the type of merge we have :\n",
+        "inner\n",
+        "outer\n",
+        "left\n",
+        "right.\n",
+        "\n",
+        "Pandas concatenation using the concat method : concatenation is a simpler way to combine datasets. It’s often used to form a single, larger set to do additional operations on.When you call concat(), a copy of all the data that you’re joined/stitched is made."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "gHfuFygF8qYU"
-      }
+      },
+      "source": [
+        "## importing my dependecy"
+      ]
     },
     {
       "cell_type": "code",
@@ -38,25 +43,16 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# creating my order dataframe"
-      ],
       "metadata": {
         "id": "GtQeadzL816U"
-      }
+      },
+      "source": [
+        "# creating my order dataframe"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "orders = pd.DataFrame({\n",
-        "'order_id' : [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20],\n",
-        "'customer_id' : [2,5,6,1,7,9,10,3,4,8,5,7,9,3,4,2,6,10,1,8],\n",
-        "'product_id' : [15,1,2,3,4,5,7,8,3,2,11,12,14,10,9,6,15,10,15,13],\n",
-        "'quantity' : [5,3,2,5,5,4,3,5,1,5,3,2,1,1,1,4,4,5,4,5]\n",
-        "})\n",
-        "\n",
-        "print(orders)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -64,11 +60,10 @@
         "id": "oOyhsQul0Anb",
         "outputId": "d292ca30-b5c9-4335-d894-34c20f13f700"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "    order_id  customer_id  product_id  quantity\n",
             "0          1            2          15         5\n",
@@ -93,28 +88,30 @@
             "19        20            8          13         5\n"
           ]
         }
+      ],
+      "source": [
+        "orders = pd.DataFrame({\n",
+        "'order_id' : [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20],\n",
+        "'customer_id' : [2,5,6,1,7,9,10,3,4,8,5,7,9,3,4,2,6,10,1,8],\n",
+        "'product_id' : [15,1,2,3,4,5,7,8,3,2,11,12,14,10,9,6,15,10,15,13],\n",
+        "'quantity' : [5,3,2,5,5,4,3,5,1,5,3,2,1,1,1,4,4,5,4,5]\n",
+        "})\n",
+        "\n",
+        "print(orders)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "creating my product dataframe"
-      ],
       "metadata": {
         "id": "x5lRAc9A88yr"
-      }
+      },
+      "source": [
+        "creating my product dataframe"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "products = pd.DataFrame({\n",
-        "    'product_id' : [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15],\n",
-        "    'product_description' : ['toilet paper', 'blueband','bottle water','chocolate','milk','yougurt','dish washer','ice cream','note pads','bread','sardines','soap','juice','perfumes','wine'],\n",
-        "    'product_price' : [700,1500,200,3000,4500,2500,1500,2000,1000,1000,750,4000,2500,15000,20000]\n",
-        "})\n",
-        "\n",
-        "print(products)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -122,11 +119,10 @@
         "id": "JJOGO1U95lbL",
         "outputId": "a4edb6eb-4bfb-4d30-c52d-b1d467f6535e"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "    product_id product_description  product_price\n",
             "0            1        toilet paper            700\n",
@@ -146,29 +142,29 @@
             "14          15                wine          20000\n"
           ]
         }
+      ],
+      "source": [
+        "products = pd.DataFrame({\n",
+        "    'product_id' : [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15],\n",
+        "    'product_description' : ['toilet paper', 'blueband','bottle water','chocolate','milk','yougurt','dish washer','ice cream','note pads','bread','sardines','soap','juice','perfumes','wine'],\n",
+        "    'product_price' : [700,1500,200,3000,4500,2500,1500,2000,1000,1000,750,4000,2500,15000,20000]\n",
+        "})\n",
+        "\n",
+        "print(products)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## creating my customers data frame"
-      ],
       "metadata": {
         "id": "xvkRHbVl9DGY"
-      }
+      },
+      "source": [
+        "## creating my customers data frame"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "customers = pd.DataFrame({\n",
-        "    'customer_id': [1,2,3,4,5,6,7,8,9,10],\n",
-        "    'customer_name': ['mary','kate','judy','tina','grace','john','andrew','sandra','gift','henry'],\n",
-        "    'customer_address': ['ketu,lagos','badagry,lagos','magodo,lagos','yaba,lagos','palmgroove,lagos','surulere,lagos','lekki,lagos','vgc,lagos','chevron,lagos','ikeja,lagos'],\n",
-        "    'customer_phone_number': ['09068572431','07066778934','08036647467','08099675434','07088946971','09054381003','09011000034','08067390234','09056782418','08195672345']\n",
-        "})\n",
-        "\n",
-        "print(customers)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -176,11 +172,10 @@
         "id": "MPargK8f81aO",
         "outputId": "1037b258-6aa7-475b-84fd-1f48754241c2"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "   customer_id customer_name  customer_address customer_phone_number\n",
             "0            1          mary        ketu,lagos           09068572431\n",
@@ -195,26 +190,30 @@
             "9           10         henry       ikeja,lagos           08195672345\n"
           ]
         }
+      ],
+      "source": [
+        "customers = pd.DataFrame({\n",
+        "    'customer_id': [1,2,3,4,5,6,7,8,9,10],\n",
+        "    'customer_name': ['mary','kate','judy','tina','grace','john','andrew','sandra','gift','henry'],\n",
+        "    'customer_address': ['ketu,lagos','badagry,lagos','magodo,lagos','yaba,lagos','palmgroove,lagos','surulere,lagos','lekki,lagos','vgc,lagos','chevron,lagos','ikeja,lagos'],\n",
+        "    'customer_phone_number': ['09068572431','07066778934','08036647467','08099675434','07088946971','09054381003','09011000034','08067390234','09056782418','08195672345']\n",
+        "})\n",
+        "\n",
+        "print(customers)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## merging my datasets from each table together"
-      ],
       "metadata": {
         "id": "aNsyAZEJ9OIc"
-      }
+      },
+      "source": [
+        "## merging my datasets from each table together"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "order_products = orders.merge(products)\n",
-        "# print(order_products)\n",
-        "\n",
-        "my_customers = order_products.merge(customers)\n",
-        "print(my_customers)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -222,11 +221,10 @@
         "id": "IjYyQVyvCqq_",
         "outputId": "0251d455-149d-46d4-b61c-e7765597ae7f"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "    order_id  customer_id  product_id  quantity product_description  \\\n",
             "0          1            2          15         5                wine   \n",
@@ -273,33 +271,36 @@
             "19           1000          judy      magodo,lagos           08036647467  \n"
           ]
         }
+      ],
+      "source": [
+        "order_products = orders.merge(products)\n",
+        "# print(order_products)\n",
+        "\n",
+        "my_customers = order_products.merge(customers)\n",
+        "print(my_customers)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "i observed that my table merged properly, using column information's without such command being passed in my code, shared across the three different dataframe , to identify where pieces of information from the table fits and where they reoccur."
-      ],
       "metadata": {
         "id": "Q0kEBeIuRBtR"
-      }
+      },
+      "source": [
+        "i observed that my table merged properly, using column information's without such command being passed in my code, shared across the three different dataframe , to identify where pieces of information from the table fits and where they reoccur."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## merging my customers and orders data frames together"
-      ],
       "metadata": {
         "id": "7r1KwBOk9eID"
-      }
+      },
+      "source": [
+        "## merging my customers and orders data frames together"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "customer_orders = customers.merge(orders, on='customer_id')\n",
-        "\n",
-        "print(customer_orders)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -307,11 +308,10 @@
         "id": "Y3LaxO93JElL",
         "outputId": "2b2b5f6e-f969-4fe5-ee1d-8cb9fbc83c38"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "    customer_id customer_name  customer_address customer_phone_number  \\\n",
             "0             1          mary        ketu,lagos           09068572431   \n",
@@ -358,62 +358,63 @@
             "19        18          10         5  \n"
           ]
         }
+      ],
+      "source": [
+        "customer_orders = customers.merge(orders, on='customer_id')\n",
+        "\n",
+        "print(customer_orders)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "i had to specify which column i want my table to merge on, which is the customers_id seen as both dataframe share that in common."
-      ],
       "metadata": {
         "id": "FeTWIaPqRMYE"
-      }
+      },
+      "source": [
+        "i had to specify which column i want my table to merge on, which is the customers_id seen as both dataframe share that in common."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# merging my customers and product dataframe together "
-      ],
       "metadata": {
         "id": "bk_S7lpd9phf"
-      }
+      },
+      "source": [
+        "# merging my customers and product dataframe together "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "customer_products = customers.merge(products, how='outer')"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "fMJWo5CxOcqm"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "customer_products = customers.merge(products, how='outer')"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "this wont work seen as both dataframe have no common columes to merge with."
-      ],
       "metadata": {
         "id": "wxOnQ0_cQiGU"
-      }
+      },
+      "source": [
+        "this wont work seen as both dataframe have no common columes to merge with."
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## merging my customers and order data frame together "
-      ],
       "metadata": {
         "id": "12o7QJ-b97P-"
-      }
+      },
+      "source": [
+        "## merging my customers and order data frame together "
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "customer_order = customers.merge(orders, how='left')\n",
-        "\n",
-        "print(customer_order)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -421,11 +422,10 @@
         "id": "1QnMMNLa4CzX",
         "outputId": "103a16a0-b0e6-4138-ec66-4f31c8554c8b"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "    customer_id customer_name  customer_address customer_phone_number  \\\n",
             "0             1          mary        ketu,lagos           09068572431   \n",
@@ -472,55 +472,56 @@
             "19        18          10         5  \n"
           ]
         }
+      ],
+      "source": [
+        "customer_order = customers.merge(orders, how='left')\n",
+        "\n",
+        "print(customer_order)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "this code workscause both dataframes share a common column in the dataset\n"
-      ],
       "metadata": {
         "id": "-7X_bD6nZYd_"
-      }
+      },
+      "source": [
+        "this code workscause both dataframes share a common column in the dataset\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "5jPX6U9nJCQM"
+      },
+      "outputs": [],
       "source": [
         "customer_product = customers.merge(products, how='right')\n",
         "\n",
         "print(customer_product)"
-      ],
-      "metadata": {
-        "id": "5jPX6U9nJCQM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "this code wont work cause bot dataframes has no common column "
-      ],
       "metadata": {
         "id": "EJcNVIMkZMq3"
-      }
+      },
+      "source": [
+        "this code wont work cause bot dataframes has no common column "
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## concatenating my tables together with the .concat() function"
-      ],
       "metadata": {
         "id": "_AA5M5af-h6Z"
-      }
+      },
+      "source": [
+        "## concatenating my tables together with the .concat() function"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "my_new_df = [orders,products,customers]\n",
-        "result = pd.concat(my_new_df)\n",
-        "print(result)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -528,11 +529,10 @@
         "id": "GEan6OnuTukb",
         "outputId": "14485fc1-e0a5-46a2-acc3-ba2e39bb19ee"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "    order_id  customer_id  product_id  quantity product_description  \\\n",
             "0        1.0          2.0        15.0       5.0                 NaN   \n",
@@ -629,7 +629,35 @@
             "9             NaN         henry       ikeja,lagos           08195672345  \n"
           ]
         }
+      ],
+      "source": [
+        "my_new_df = [orders,products,customers]\n",
+        "result = pd.concat(my_new_df)\n",
+        "print(result)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "name": "pandas_manipulation.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.8.10 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.8.10"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
